Turbo frames post, CSS refactored, cards partial added

--- a/src/_pages/404.html
+++ b/src/_pages/404.html
@@ -3,7 +3,12 @@ permalink: /404.html
 layout: default
 ---
 
-<h1>404</h1>
+<section-wrapper class="fade-in-animation" style="padding-top:3rem"><section>
+
+
+<h2>404</h2>
 
 <p><strong>Page not found :(</strong></p>
 <p>The requested page could not be found.</p>
+
+</section></section-wrapper>
